--- a/index.html
+++ b/index.html
@@ -23,13 +23,19 @@
 <body>
 
     <div class="container">
-        <div class="background">
+        <div class="bkg-section">
             <div class="bkg-black"></div>
             <div class="bkg-green"></div>
             <div class="bkg-grey"></div>
         </div>
 
-        <main></main>
+        <main>
+            <section class="chat-thumbs">
+                <div class="my-account"></div>
+                
+            </section>
+        </main>
+
     </div>
 
 
