setting main section

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
         </div>
 
         <main>
-            <section class="chat-thumbs">
+            <section class="chats-menu">
                 <div class="my-account"></div>
-                
+                <div class="notifications-on"></div>
+                <div class="newchat-search">
+                    <!-- <input type="text" name="searching-chat" placeholder="Cerca o inizia una nuova chat"> -->
+                </div>
+            </section>
+
+            <section class="chat-opened">
+
             </section>
         </main>
 
