my-account section done

--- a/index.html
+++ b/index.html
@@ -31,11 +31,27 @@
 
         <main>
             <section class="chats-menu">
-                <div class="my-account"></div>
+
+                <div class="my-account">
+
+                    <div class="my-img-name">
+                        <img src="img/avatar_io.jpg" alt="L'immagine del tuo account">
+                        <span class="name">Sofia</span>
+                    </div>
+
+                    <div class="account-activities">
+                        <i class="fas fa-circle-notch"></i>
+                        <i class="fas fa-comment-alt"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </div>
+
                 <div class="notifications-on"></div>
+
                 <div class="newchat-search">
                     <!-- <input type="text" name="searching-chat" placeholder="Cerca o inizia una nuova chat"> -->
                 </div>
+
             </section>
 
             <section class="chat-opened">
