--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
                     </div>
                 </div>
 
-                <div class="notifications-on"></div>
+                <div class="notifications-on">
+                    <div class="bell-rounded"><i class="fas fa-bell-slash"></i></div>
+
+                    <div>
+                        <span>Ricevi notifiche di nuovi messaggi</span>
+                        <a href="#!">Attiva notifiche desktop</a>
+                    </div>
+                </div>
 
                 <div class="newchat-search">
                     <!-- <input type="text" name="searching-chat" placeholder="Cerca o inizia una nuova chat"> -->
