header chat-opened done

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <main>
             <section class="chats-menu">
 
-                <div class="my-account">
+                <header class="my-account account">
 
-                    <div class="my-img-name">
+                    <div class="img-name-account">
                         <img src="img/avatar_io.jpg" alt="L'immagine del tuo account">
                         <span class="name">Sofia</span>
                     </div>
@@ -44,14 +44,14 @@
                         <i class="fas fa-comment-alt"></i>
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
-                </div>
+                </header>
 
                 <div class="notifications-on">
                     <div class="bell-rounded"><i class="fas fa-bell-slash"></i></div>
 
                     <div>
                         <span>Ricevi notifiche di nuovi messaggi</span>
-                        <a href="#!">Attiva notifiche desktop</a>
+                        <a href="#!" class="font-grey-small">Attiva notifiche desktop</a>
                     </div>
                 </div>
 
@@ -62,7 +62,22 @@
             </section>
 
             <section class="chat-opened">
+                <header class="friend-account account">
+                    <div class="img-name-account">
+                        <img src="img/avatar_1.jpg" alt="Immagine di Michele">
+                        
+                        <div>
+                            <span class="name">Michele</span>
+                            <span class="font-grey-small">Ultimo accesso oggi alle 12:00</span>
+                        </div>
+                    </div>
 
+                    <div class="account-activities">
+                        <i class="fas fa-search"></i>
+                        <i class="fas fa-paperclip"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                    </div>
+                </header>
             </section>
         </main>
 
