--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <main>
             <section class="chats-menu">
 
-                <header class="my-account account">
+                <header class="account">
 
                     <div class="img-name-account">
                         <img src="img/avatar_io.jpg" alt="L'immagine del tuo account">
@@ -66,7 +66,7 @@
 
                 <div id="scroll-chats">
 
-                    <div class="account account-friend">
+                    <div class="account-friend">
                         <div class="img-name-account">
                             <img src="img/avatar_1.jpg" alt="Immagine di Michele">
                             
