working on opened-chat section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                         <i class="fas fa-ellipsis-v"></i>
                     </div>
                 </header>
+
+                <div class="main-chat"></div>
+
+                <div class="write-msg">
+                    
+                </div>
             </section>
         </main>
 
