footer of chat-opened done

--- a/index.html
+++ b/index.html
@@ -105,7 +105,13 @@
                 <div class="main-chat"></div>
 
                 <div class="write-msg">
-                    
+                    <div class="emoji">
+                        <i class="far fa-smile"></i>
+                    </div>
+                    <input type="text" placeholder="Scrivi un messaggio">
+                    <div class="audio-msg">
+                        <i class="fas fa-microphone"></i>
+                    </div>
                 </div>
             </section>
         </main>
