--- a/index.html
+++ b/index.html
@@ -100,21 +100,9 @@
                 <div class="right-messages">
 
                     <!-- message-sent -->
-                    <div class="message sent" v-for="(messageSent, index) in arrContacts[activeIndex].arrMsgsSent" :key="messageSent.id">
-                        <span class="message-text">{{messageSent.text}}</span>
+                    <div class="message" v-for="(message, index) in arrContacts[activeIndex].arrMsgs" :class="message.id == `sent` ? `sent` : `received`" >
+                        <span class="message-text">{{message.text}}</span>
                         <span class="message-time">20/03/2020 16:30:00</span>
-
-                        <i class="fa fa-chevron-down f-right message-options"></i>
-                        <div class="message-options-panel" style="display: none;">
-                            <div class="message-info">Info messaggio</div>
-                            <div class="message-destroy">Cancella messaggio</div>
-                        </div>
-                    </div>
-
-                    <!-- message-received -->
-                    <div class="message received" v-for="(messageReceived, index) in arrContacts[activeIndex].arrMsgsReceived" :key="messageReceived.id">
-                        <span class="message-text">{{messageReceived.text}}</span>
-                        <span class="message-time">20/03/2020 16:30:55</span>
 
                         <i class="fa fa-chevron-down f-right message-options"></i>
                         <div class="message-options-panel" style="display: none;">
