--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="right-footer-icon f-left">
                     <i class="far fa-smile"></i>
                 </div>
-                <input class="new-message-inputs" placeholder="Scrivi un messaggio" v-model="newSendingMsg.text" @keyup.enter="sendNewMsg">
+                <input class="new-message-inputs" placeholder="Scrivi un messaggio" v-model="newSendingMsg.text" @keyup.enter="sendNewMsg()">
                 <div class="right-footer-icon f-right">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
                 </div>
