--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- searchbar-left -->
             <div class="left-searchbar">
                 <div class="searchbar-container">
-                    <button class="search-btn" for="search">
+                    <button class="search-btn" for="search" @click="bootSearchChat">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </button>
                     <input id="contacts-filter" class="left-searchbar-input" placeholder="Cerca o inizia una nuova chat" name="search">
@@ -61,16 +61,16 @@
             <!-- contacts-left -->
             <div class="contacts">
 
-                <div class="contact" v-for="(contact, index) in arrContacts" @click="currentChatIndex = index"
+                <div class="contact" v-for="(chat, index) in arrChats" @click="currentChatIndex = index"
                     :class="index == currentChatIndex ? `active` : ``">
                     <div class="contact-img">
-                        <img :src="arrContacts[index].img" :alt="arrContacts[index].name">
+                        <img :src="chat.userObj.img" :alt="chat.userObj.name">
                     </div>
                     <div class="contact-info">
                         <h3>
-                            <span class="contact-name">{{arrContacts[index].name}}</span>
+                            <span class="contact-name">{{chat.userObj.name}}</span>
                             <span class="time f-right">
-                                {{arrContacts[index].lastMsgTime}}
+                                {{chat.userObj.lastMsgTime}}
                             </span>
                         </h3>
                         <small>Tutto fatto! ...</small>
@@ -86,8 +86,8 @@
             <!-- header-right -->
             <div class="header-right">
                 <div class="header-right-img">
-                    <img :src="arrContacts[currentChatIndex].img" :alt="arrContacts[currentChatIndex].name">
-                    <h3><span id="header-right-contact-name">{{arrContacts[currentChatIndex].name}}</span> <br> <small
+                    <img :src="arrChats[currentChatIndex].userObj.img" :alt="arrChats[currentChatIndex].userObj.name">
+                    <h3><span id="header-right-contact-name">{{arrChats[currentChatIndex].userObj.name}}</span> <br> <small
                             class="time">Ultimo accesso oggi
                             alle</small></h3>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="right-messages">
 
                     <!-- messages -->
-                    <div class="message" v-for="message in arrContacts[currentChatIndex].arrMsgs"
+                    <div class="message" v-for="message in arrChats[currentChatIndex].arrMsgs"
                         :class="{sent : message.sent, received : !message.sent }">
                         <span class="message-text">{{message.text}}</span>
                         <span class="message-time">20/03/2020 16:30:00</span>
