--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <!-- header-left -->
             <div class="header-left">
                 <div class="header-left-img">
-                    <img src="img/avatar_io.jpg" alt="Nome Utente">
-                    <h3>Sofia</h3>
+                    <img :src="mainUser.img" :alt="mainUser.name">
+                    <h3>{{mainUser.name}}</h3>
                 </div>
                 <div class="header-left-icons">
                     <i class="fas fa-circle-notch"></i>
@@ -51,7 +51,7 @@
             <!-- searchbar-left -->
             <div class="left-searchbar">
                 <div class="searchbar-container">
-                    <button class="search-btn" for="search" @click="bootSearchChat">
+                    <button class="search-btn" for="search">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </button>
                     <input id="contacts-filter" class="left-searchbar-input" placeholder="Cerca o inizia una nuova chat" name="search">
@@ -64,13 +64,13 @@
                 <div class="contact" v-for="(chat, index) in arrChats" @click="currentChatIndex = index"
                     :class="index == currentChatIndex ? `active` : ``">
                     <div class="contact-img">
-                        <img :src="chat.userObj.img" :alt="chat.userObj.name">
+                        <img :src="chat.user.img" :alt="chat.user.name">
                     </div>
                     <div class="contact-info">
                         <h3>
-                            <span class="contact-name">{{chat.userObj.name}}</span>
+                            <span class="contact-name">{{chat.user.name}}</span>
                             <span class="time f-right">
-                                {{chat.userObj.lastMsgTime}}
+                                {{chat.user.lastMsgTime}}
                             </span>
                         </h3>
                         <small>Tutto fatto! ...</small>
@@ -86,8 +86,8 @@
             <!-- header-right -->
             <div class="header-right">
                 <div class="header-right-img">
-                    <img :src="arrChats[currentChatIndex].userObj.img" :alt="arrChats[currentChatIndex].userObj.name">
-                    <h3><span id="header-right-contact-name">{{arrChats[currentChatIndex].userObj.name}}</span> <br> <small
+                    <img :src="arrChats[currentChatIndex].user.img" :alt="arrChats[currentChatIndex].user.name">
+                    <h3><span id="header-right-contact-name">{{arrChats[currentChatIndex].user.name}}</span> <br> <small
                             class="time">Ultimo accesso oggi
                             alle</small></h3>
                 </div>
@@ -123,7 +123,7 @@
                 <div class="right-footer-icon f-left">
                     <i class="far fa-smile"></i>
                 </div>
-                <input class="new-message-inputs" placeholder="Scrivi un messaggio" v-model="newSendingMsg.text"
+                <input class="new-message-inputs" placeholder="Scrivi un messaggio" v-model="arrChats[currentChatIndex].newMsgContent"
                     @keyup.enter="sendNewMsg()">
                 <div class="right-footer-icon f-right">
                     <i class="fa fa-microphone" aria-hidden="true"></i>
@@ -134,6 +134,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
