--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- searchbar-left -->
             <div class="left-searchbar">
                 <div class="searchbar-container">
-                    <button class="search-btn" for="search">
+                    <button class="search-btn" for="search" @click="contactsFilter">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </button>
                     <input id="contacts-filter" @keyup="contactsFilter" v-model="searchingName" class="left-searchbar-input" placeholder="Cerca o inizia una nuova chat" name="search">
@@ -61,7 +61,7 @@
             <!-- contacts-left -->
             <div class="contacts">
 
-                <div class="contact" v-for="(chat, index) in arrChats" @click="currentChatIndex = index" :class="{active: index == currentChatIndex, hidden: !chat.user.visible}" v-show="chat.user.visible">
+                <div class="contact" v-for="(chat, index) in arrChats" @click="currentChatIndex = index" :class="{active: index == currentChatIndex}" v-show="chat.user.visible">
                     <div class="contact-img">
                         <img :src="chat.user.img" :alt="chat.user.name">
                     </div>
@@ -107,7 +107,7 @@
                         <span class="message-time">20/03/2020 16:30:00</span>
 
                         <i class="fa fa-chevron-down f-right message-options"></i>
-                        <div class="message-options-panel" style="display: none;">
+                        <div class="message-options-panel">
                             <div class="message-info">Info messaggio</div>
                             <div class="message-destroy">Cancella messaggio</div>
                         </div>
