--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
                         <span class="message-text">{{message.text}}</span>
                         <span class="message-time">20/03/2020 16:30:00</span>
 
-                        <i class="fa fa-chevron-down f-right message-options"></i>
-                        <div class="message-options-panel">
-                            <div class="message-info">Info messaggio</div>
-                            <div class="message-destroy">Cancella messaggio</div>
-                        </div>
+                        <i class="fa fa-chevron-down f-right message-options">
+                            <div class="message-options-panel">
+                                <div class="message-info">Info messaggio</div>
+                                <div class="message-destroy">Cancella messaggio</div>
+                            </div>
+                        </i>
                     </div>
 
                 </div>
