--- a/index.html
+++ b/index.html
@@ -106,13 +106,12 @@
                         <span class="message-text">{{message.text}}</span>
                         <span class="message-time">{{message.time}}</span>
 
-                        <i class="fa fa-chevron-down f-right message-options"></i>
-                        <!-- <div id="message-options-panel">
-                            <div class="message-info">Info messaggio</div>
-                            <div class="message-destroy" @click="removeMsg(msgIndex)">Cancella messaggio</div>
-                        </div> -->
+                        <i class="fa fa-chevron-down f-right message-options" @click="showPanel(msgIndex)"></i>
+                        <div class="message-options-panel" :class="{active : message.msgPanel}">
+                          <div class="message-info">Info messaggio</div>
+                          <div class="message-destroy" @click="removeMsg(msgIndex)">Cancella messaggio</div>
+                        </div>
                     </div>
-
                 </div>
             </div>
 
