--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
                     <div class="contact-info">
                         <h3>
                             <span class="contact-name">{{chat.user.name}}</span>
-                            <span class="time f-right">
-                                {{chat.user.lastMsgTime}}
-                            </span>
+                            <span class="time f-right">{{lastMsg}}</span>
                         </h3>
                         <small>Tutto fatto! ...</small>
                     </div>
