--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <span class="contact-name">{{chat.user.name}}</span>
                             <span class="time f-right">{{lastMsg.time}}</span>
                         </h3>
-                        <small>Tutto fatto! ...</small>
+                        <small>tutto fatto! ...</small>
                     </div>
                 </div>
 
@@ -84,9 +84,11 @@
             <div class="header-right">
                 <div class="header-right-img">
                     <img :src="arrChats[currentChatIndex].user.img" :alt="arrChats[currentChatIndex].user.name">
-                    <h3><span id="header-right-contact-name">{{arrChats[currentChatIndex].user.name}}</span> <br> <small
-                            class="time">Ultimo accesso oggi
-                            alle</small></h3>
+                    <h3>
+                        <span id="header-right-contact-name">{{arrChats[currentChatIndex].user.name}}</span> 
+                        <br> 
+                        <small class="time">Ultimo accesso oggi alle</small>
+                    </h3>
                 </div>
                 <div class="header-right-icons">
                     <i class="fas fa-search"></i>
@@ -102,7 +104,7 @@
                     <!-- messages -->
                     <div class="message" v-for="(message, msgIndex) in arrChats[currentChatIndex].arrMsgs" :class="{sent : message.sent, received : !message.sent }">
                         <span class="message-text">{{message.text}}</span>
-                        <span class="message-time">{{message.time}}</span>
+                        <span class="message-time">{{ formattedDate(message.time, `italian`) }}</span>
 
                         <i class="fa fa-chevron-down f-right message-options" @click="showPanel(msgIndex)"></i>
                         <div class="message-options-panel" :class="{active : message.msgPanel}">
